Fixes to mobile spacing, added in-page links and JS for smooth scrolling

--- a/style.scss
+++ b/style.scss
@@ -16,6 +16,7 @@
 html {
   font-size: 100%;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -236,7 +237,7 @@ img {
   }
 
   @include mobile {
-    padding: 2.8em 0;
+    padding: 2.8em 0.4em;
   }
 }
 
@@ -252,7 +253,7 @@ img {
     margin-top: 0;
     @include mobile {
       font-size: 28px;
-      margin: .6em 0 .2em;
+      margin: 1.2em 0 .8em;
       text-align: center;
     }
   }
